Add split and vert classes to content div

--- a/chicago.html
+++ b/chicago.html
@@ -66,15 +66,19 @@
 									<img src="images/pic02.png" alt="" />
 								</div>
 								<div class="content">
-									<h2>Orland Park Prayer Center</h2>
-									<p>address</p>
-									<ul class="actions">
-										<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
-									</ul>
-									<p style="font-size: 36px; color: white; margin-bottom: 5px;">Jumu'ah</p>
-									<p class="time">12:00p</p><br>
-									<p class="time">12:00p</p>
-									<p class="time">12:00p</p>
+									<div class="split">
+										<h2>Orland Park Prayer Center</h2>
+										<p>address</p>
+										<ul class="actions">
+											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
+										</ul>
+									</div>
+									<section class="vert">
+										<h2 style="font-weight: 300; color: white; margin-bottom: 3rem;">Jumu'ah</h2>
+										<p class="time">12:00p</p><br>
+										<p class="time">12:00p</p><br>
+										<p class="time">12:00p</p>
+									</section>
 								</div>
 							</div>
 							<div class="spotlight">
@@ -82,11 +86,19 @@
 									<img src="images/pic03.png" alt="" />
 								</div>
 								<div class="content">
-									<h2>The Mecca Center</h2>
-									<p>Short description, address, etc.</p>
-									<ul class="actions">
-										<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
-									</ul>
+									<div class="split">
+										<h2>The Mecca Center</h2>
+										<p>Short description, address, etc.</p>
+										<ul class="actions">
+											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
+										</ul>
+									</div>
+									<section class="vert">
+										<h2 style="font-weight: 300; color: white; margin-bottom: 3rem;">Jumu'ah</h2>
+										<p class="time">12:00p</p><br>
+										<p class="time">12:00p</p><br>
+										<p class="time">12:00p</p>
+									</section>
 								</div>
 							</div>
 							<div class="spotlight">
@@ -94,11 +106,19 @@
 									<img src="images/pic04.png" alt="" />
 								</div>
 								<div class="content">
-									<h2>Muslim Community Center</h2>
-									<p>Short description, address, etc.</p>
-									<ul class="actions">
-										<li><a href="#" class="buttonEnter primary">View Events</a></li>
-									</ul>
+									<div class="split">
+										<h2>Muslim Community Center</h2>
+										<p>Short description, address, etc.</p>
+										<ul class="actions">
+											<li><a href="#" class="buttonEnter primary">View Events</a></li>
+										</ul>
+									</div>
+									<section class="vert">
+										<h2 style="font-weight: 300; color: white; margin-bottom: 3rem;">Jumu'ah</h2>
+										<p class="time">12:00p</p><br>
+										<p class="time">12:00p</p><br>
+										<p class="time">12:00p</p>
+									</section>
 								</div>
 							</div>
 							<div class="spotlight">
