Add button with no arrow for request of city

--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@
 								</a>
 							</div>
 						</div>
+						<div style="text-align: center;">
+							<a href="#" class="buttonPlain primary" style="display: inline-block;" >Request my city...</a>
+						</div>
 					</section>
 					
 		<!-- Footer -->
