--- a/mosque.html
+++ b/mosque.html
@@ -18,7 +18,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="#" class="icon solid fa-angle-down">Chicago</a>
+							<a href="#" class="icon solid fa-angle-down">Mosques</a>
 							<ul class="dropdown-menu" style="display: grid; grid-template-columns: repeat(2, 1fr);">
 								<li><a href="mosque.html">Islamic Center of Des Plaines</a></li>
 								<li><a href="mosque.html">Islamic Center of Naperville - 75th Street</a></li>
@@ -34,7 +34,8 @@
 								<li><a href="mosque.html">The Mecca Center</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Members</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Work With Us</a></li>
 					</ul>
 				</nav>
 			</header>
