Delete laptop, center greeting

--- a/chicago.html
+++ b/chicago.html
@@ -42,18 +42,12 @@
 
 		<!-- Banner -->
 			<div id="banner" class="wrapper">
-				<div class="inner">
-					<div class="content">
+				<div style="text-align: center; padding-top: 5rem;">
+					<div style="display: inline-block;">
 						<h1>Salaam from Chicago!</h1>
 						<ul style="display: flex; justify-content: center;" class="actions">
 							<li><a href="#one" class="button large primary scrolly">Find A Mosque</a></li>
 						</ul>
-					</div>
-					<div class="image-wrapper">
-						<img src="images/frame.png" class="frame" alt="" />
-						<div class="image">
-							<img src="images/pic01.png" alt="" />
-						</div>
 					</div>
 				</div>
 			</div>
