Add caret at bottom

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 				<div class="inner">
 					<section>
 						<ul class="actions fit">
-							<li><a href="#banner" class= "fit scrolly" style="color: #2bad6c">Back to top</a></li>
+							<li><a href="#banner" class= "fit scrolly" style="color: #2bad6c">Back to top ^</a></li>
 						</ul>
 					</section>
 					<p class="copyright">
