Delete placeholder pic

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 						</ul>
 					</div>
 					<div class="image-wrapper">
-						<img src="images/frame.png" class="frame" alt="" />
+						<img src="images/frame.png" class="frame" alt="laptop frame"/>
 						<div class="image">
-							<img src="images/pic01.png" alt="" />
+							<img src="" alt="Dynamic Calendar Pic" />
 						</div>
 					</div>
 				</div>
