Add class contentCenter

--- a/chicago.html
+++ b/chicago.html
@@ -42,7 +42,7 @@
 
 		<!-- Banner -->
 			<div id="banner" class="wrapper">
-				<div style="text-align: center; padding-top: 5rem;">
+				<div class="contentCenter">
 					<div style="display: inline-block;">
 						<h1>Salaam from Chicago!</h1>
 						<ul style="display: flex; justify-content: center;" class="actions">
