Add placeholders for symbols

--- a/chicago.html
+++ b/chicago.html
@@ -66,6 +66,7 @@
 										<ul class="actions">
 											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
 										</ul>
+										<p>Symbols Here</p>
 									</div>
 									<section class="vert">
 										<h2 style="font-weight: 300; color: white; margin-bottom: 3rem;">Jumu'ah</h2>
@@ -86,6 +87,7 @@
 										<ul class="actions">
 											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
 										</ul>
+										<p>Symbols Here</p>
 									</div>
 									<section class="vert">
 										<h2 style="font-weight: 300; color: white; margin-bottom: 3rem;">Jumu'ah</h2>
@@ -106,6 +108,7 @@
 										<ul class="actions">
 											<li><a href="#" class="buttonEnter primary">View Events</a></li>
 										</ul>
+										<p>Symbols Here</p>
 									</div>
 									<section class="vert">
 										<h2 style="font-weight: 300; color: white; margin-bottom: 3rem;">Jumu'ah</h2>
