--- a/chicago.html
+++ b/chicago.html
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<a class="logo" href="index.html">NAME</a>
+				<a class="logo" href="index.html">N.A.M.E.</a>
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
