--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<a class="logo" href="#">NAME</a>
+				<a class="logo" href="#">N.A.M.E.</a>
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="#">Home</a></li>
