Add back arrow to Chicago

--- a/mosque.html
+++ b/mosque.html
@@ -13,7 +13,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="chicago.html">Chicago</a>
+				<a class="logo" href="chicago.html">&lt; Chicago</a>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
