Change title to all caps

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</nav>
 			</header>
 
-			<div class="background title">North American Muslim Events</div>
+			<div class="background title">NORTH AMERICAN MUSLIM EVENTS</div>
 		
 		<!-- Banner -->
 			<div id="banner" class="wrapper">
